BugFix - overlapping text in timeline

--- a/src/Skills/Timeline/Timeline.css
+++ b/src/Skills/Timeline/Timeline.css
@@ -20,4 +20,8 @@
     .skillsTitle {
         display: none;
     }
+
+    .vertical-timeline-element-title {
+        font-size: 15px;
+    }
 }
